Fix button background issue on Firefox

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -7,7 +7,6 @@
   padding: 5px 20px 8px 20px;
   position: relative;    
   transition: background 0.5s, color 0.5s;
-  z-index: 1;
   
   &:before {
     content: '';
