--- a/style.css
+++ b/style.css
@@ -223,7 +223,6 @@ a:hover {
   padding: 5px 20px 8px 20px;
   position: relative;
   transition: background 0.5s, color 0.5s;
-  z-index: 1;
 }
 .button:before {
   content: "";
